added more activities

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:textSize="15sp"
+                android:layout_marginTop="40dp"
                 android:text="@string/available_trucks"
                 android:textStyle="bold" />
 
@@ -27,7 +28,6 @@
                 android:id="@+id/my_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:scrollbars="vertical"/>
 
