--- a/app/src/main/res/layout/menu_main.xml
+++ b/app/src/main/res/layout/menu_main.xml
@@ -7,7 +7,8 @@
     tools:context=".MainActivity">
     <item
         android:id="@+id/add_item"
-        android:title="@drawable/ic_notifications"
+        android:title="Add"
         android:orderInCategory="100"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        tools:ignore="HardcodedText" />
 </menu>
