--- a/app/src/main/res/layout/interior_card_layout.xml
+++ b/app/src/main/res/layout/interior_card_layout.xml
@@ -29,7 +29,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewName2"
+                    android:id="@+id/interiorName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
